--- a/src/pages/app/homepage/home.css
+++ b/src/pages/app/homepage/home.css
@@ -1,46 +1,23 @@
-.navbar {
+.container {
+  width: 100%;
+  background-color: white;
+  margin: 24px;
+  padding: 24px;
   display: flex;
-  align-items: center;
-  padding: 10px;
-  background-color: #27355f;
+  flex-direction: column;
 }
 
-.navbar-left {
-  display: flex;
-  align-items: center;
-  margin-right: 330px;
+.stu-info {
+  background-color: #3a4750;
+  padding: 24px;
+  color: white;
+  border-radius: 8px;
 }
 
-.navbar-right {
-  display: flex;
-  align-items: center;
-  margin-left: 330px;
+.title {
+  text-decoration: underline;
 }
 
-.first-text, .second-text, .third-text {
-    font-weight: bold;
-    color: #fff;
-  }
-
-.first-text .second-text{
-    font-size: 20px;
-}
-
-.third-text {
-    font-size: 10px;
-}
-
-.button {
-  background-color: #53659c;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  font-size: 10px;
-  font-weight: bold;
-  cursor: pointer;
-  margin-left: 30px;
-}
-
-.logo {
-    margin-right: 30px;
+.timer {
+  align-self: end;
 }
