--- a/src/pages/app/homepage/home.css
+++ b/src/pages/app/homepage/home.css
@@ -1,10 +1,12 @@
 .container {
   width: 100%;
   background-color: white;
+  border: 2px solid rgb(242, 242, 242);
   margin: 24px;
   padding: 24px;
   display: flex;
   flex-direction: column;
+  border-radius: 2px;
 }
 
 .stu-info {
