--- a/src/pages/public/auth-pages/login.css
+++ b/src/pages/public/auth-pages/login.css
@@ -23,11 +23,16 @@
 }
 
 .login-button {
-  background-color: rgb(48, 56, 65);
-  border-radius: 10px;
-  border: 1px solid rgb(158, 158, 158);
-  padding: 5px 10px 5px 10px;
-  color: rgb(255, 255, 255);
-  margin-top: 10px;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
-}
+    text-align: center;
+    background-color: rgb(48, 56, 65);
+    border-radius: 10px;
+    border: 1px solid rgb(158, 158, 158);
+    padding: 16px 21px 16px 21px;
+    color: rgb(255, 255, 255);
+    margin-top: 10px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
