--- a/src/pages/app/student/candidateship/candidateship.css
+++ b/src/pages/app/student/candidateship/candidateship.css
@@ -7,22 +7,18 @@
   display: flex;
   flex-direction: column;
   border-radius: 2px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
-.info {
-  background-color: rgb(123, 170, 100);
-  width: 300px;
-  align-self: flex-start;
-  margin-top: 200px;
-  margin-left: 30px;
-  border-radius: 2px;
-}
 
 .main {
   background-color: rgb(195, 195, 195);
   width: 350px;
   height: 400px;
   border-radius: 3px;
+  margin-left: 460px;
+  margin-top: 70px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
 .content {
@@ -32,6 +28,7 @@
   margin-left: 50px;
   margin-top: 35px;
   border-radius: 3px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
 .content img {
@@ -62,4 +59,5 @@
   border-radius: 3px;
   border: none;
   cursor: pointer;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.7);
 }
