--- a/src/pages/app/student/vote/vote.css
+++ b/src/pages/app/student/vote/vote.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 2px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .heading > p {
@@ -20,19 +21,6 @@
   padding-bottom: 5px;
 }
 
-.top-section > img {
-  width: 90px;
-  height: 83px;
-  float: left;
-  margin-right: 10px;
-  margin-bottom: 10px;
-}
-
-.top-section {
-  background-color: rgb(55, 55, 73);
-  color: aliceblue;
-  margin-bottom: 0;
-}
 
 .items {
   display: grid;
@@ -40,6 +28,7 @@
   grid-gap: 20px;
   margin-bottom: 0px;
 }
+
 
 .timer {
   padding: 0px 5px 0px 5px;
@@ -49,40 +38,29 @@
   background-color: #303841;
   color: white;
   border-radius: 4px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
-.click {
-  background-color: rgb(191, 191, 207);
-  display: flex;
-  justify-content: center;
-  margin-top: 0;
-}
 
-.click > button {
-  background-color: rgb(191, 191, 207);
-  border: none;
-  outline: none;
-  padding-top: 5px;
+.item {
+  padding-left: 16px;
   padding-bottom: 5px;
-  transition: background-color 0.3s;
-  cursor: pointer;
-  color: black;
+  padding-top: 5px;
+  background-color: rgb(249, 255, 255);
+  margin-top: 40px;
+  margin-left: 15px;
+  box-shadow: 0px 2px 4px rgba(96, 96, 96, 0.1); 
 }
-
-.top-paragraph {
-  display: flex;
-  flex-direction: column;
+/* .top-section > img {
+  width: 90px;
+  height: 83px;
+  float: left;
+  margin-right: 5px;
+  margin-left: 10px;
   margin-bottom: 10px;
 }
 
-.top-paragraph p {
-  margin: 0;
-}
-
-.top-paragraph p:not(:last-child) {
-  margin-bottom: 0;
-}
-
-.bottom-paragraph {
-  margin-top: 10px;
-}
+.top-section {
+  color: aliceblue;
+  width: 100%;
+} */
