--- a/src/pages/app/student/vote/vote.css
+++ b/src/pages/app/student/vote/vote.css
@@ -1,13 +1,12 @@
 .container {
-  width: 100%;
   background-color: white;
   border: 2px solid rgb(242, 242, 242);
   margin: 24px;
-  padding: 0;
+
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   border-radius: 2px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .heading > p {
@@ -21,7 +20,6 @@
   padding-bottom: 5px;
 }
 
-
 .items {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -29,27 +27,11 @@
   margin-bottom: 0px;
 }
 
-
-.timer {
-  padding: 0px 5px 0px 5px;
-  margin-top: 310px;
-  margin-right: 50px;
-  align-self: flex-end;
-  background-color: #303841;
-  color: white;
-  border-radius: 4px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
-}
-
-
 .item {
-  padding-left: 16px;
-  padding-bottom: 5px;
-  padding-top: 5px;
+  padding: 5px 16px;
   background-color: rgb(249, 255, 255);
-  margin-top: 40px;
-  margin-left: 15px;
-  box-shadow: 0px 2px 4px rgba(96, 96, 96, 0.1); 
+  margin: 40px 15px 0 15px;
+  box-shadow: 0px 2px 4px rgba(96, 96, 96, 0.1);
 }
 /* .top-section > img {
   width: 90px;
