--- a/src/pages/app/student/homepage/home.css
+++ b/src/pages/app/student/homepage/home.css
@@ -1,14 +1,3 @@
-.container {
-  width: 100%;
-  background-color: white;
-  border: 2px solid rgb(242, 242, 242);
-  margin: 24px;
-  padding: 24px;
-  display: flex;
-  flex-direction: column;
-  border-radius: 2px;
-}
-
 .stu-info {
   background-color: #3a4750;
   padding: 24px;
@@ -18,6 +7,12 @@
 
 .title {
   text-decoration: underline;
+  font-size: 20px;
+}
+
+.title2{
+  font-size: 36px;
+  margin-bottom: 48px;
 }
 
 .info-profile {
@@ -27,8 +22,9 @@
 }
 
 .info-profile img {
-  width: 68px;
-  height: 82px;
+  width: 144px;
+  height: 128px;
+  border-radius: 999px;
   margin-right: 24px;
 }
 
@@ -38,17 +34,11 @@
 
 .info-text {
   margin-bottom: 20px;
+  font-size: larger;
 }
 
 .election-info {
   margin-bottom: 48px;
+  font-size: larger;
 }
 
-.timer {
-  margin-top: 50px;
-  padding: 10px 60px;
-  align-self: flex-end;
-  background-color: #303841;
-  color: white;
-  border-radius: 8px;
-}
