--- a/src/common/components/cards/candidateship/candidateship-card.css
+++ b/src/common/components/cards/candidateship/candidateship-card.css
@@ -1,22 +1,19 @@
-
 .main {
   background-color: rgb(195, 195, 195);
   width: 350px;
   height: 400px;
   border-radius: 3px;
-  margin-left: 460px;
-  margin-top: 70px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.7);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .content {
   background-color: rgb(64, 73, 83);
   width: 250px;
   height: 270px;
-  margin-left: 50px;
-  margin-top: 35px;
   border-radius: 3px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
 .content img {
@@ -42,8 +39,6 @@
   width: 250px;
   height: 50px;
   text-align: center;
-  margin-top: 25px;
-  margin-left: 50px;
   border-radius: 3px;
   border: none;
   cursor: pointer;
