--- a/src/common/components/cards/candidateship/candidateship-card.css
+++ b/src/common/components/cards/candidateship/candidateship-card.css
@@ -14,13 +14,14 @@
   width: 250px;
   height: 270px;
   border-radius: 3px;
+  padding-bottom: 12px;
+  box-shadow: 0px 2px ;
 }
 
 .content img {
-  width: 140px;
-  height: 140px;
-  margin-left: 54px;
-  margin-top: 20px;
+  border-radius: 6px;
+  box-shadow: 0px 2px ;
+  width: 100%;
 }
 
 .content p {
