--- a/src/pages/public/auth-pages/login.css
+++ b/src/pages/public/auth-pages/login.css
@@ -6,33 +6,29 @@
 }
 
 .login-form {
-  padding: 24px;
-  padding-bottom: 12px;
-  border: solid #bdbdac 1px;
+  padding: 12px 24px;
+  border: solid #bdbdac 0.5px;
   border-radius: 8px;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.781);
 }
 
-.form-title {
-  display: flex;
-  justify-content: center;
-  font-size: large;
-  margin-bottom: 12px;
-  padding-bottom: 6px;
-  border-bottom: solid 1px #bdbdac;
-}
 
 .login-button {
-    text-align: center;
-    background-color: rgb(48, 56, 65);
-    border-radius: 10px;
-    border: 1px solid rgb(158, 158, 158);
-    padding: 16px 21px 16px 21px;
-    color: rgb(255, 255, 255);
-    margin-top: 10px;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  cursor: pointer;
+  background-color: rgb(48, 56, 65);
+  border-radius: 6px;
+  border: 1px solid rgb(158, 158, 158);
+  color: rgb(255, 255, 255);
+  margin-top: 10px;
+  padding: 12px 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s;
+}
+.login-button:hover {
+  background-color: rgb(255, 255, 255);
+  color: rgb(48, 56, 65);
   
+}
